# basketpwd

./: .travis.yml  CMakeLists.txt  ChangeLog.txt  README  README.md  aboutdialog.cpp  aboutdialog.ui  basketpwd-gui.pro  basketpwd.pro  basketpwd.qrc  basketpwd.rc  config.h.in  icon-images.qrc  qt_ru.qm
icons/: .directory  basketpwd.icns  index.theme
icons/48x48/: .directory
icons/classic-internal/: index.theme
images/: basketpwd.icns
l10n/: basketpwd_en.qm  basketpwd_en.ts
libs/basketpwd/: basketbaseitem.h  basketpwd-libs.pro  basketpwd-libs_global.h  basketpwd.pro  basketpwdlibs.cpp  basketpwdlibs.h  basketutils.h  coreplugin.cpp  coreplugin.h
model/: basketbaseitem.cpp  basketbaseitem.h  basketmodel.cpp  basketmodel.h
netsync/: firstnetworksender.cpp  firstnetworksender.h  qsyncclientlist.cpp  qsyncclientlist.h  syncclient.cpp  syncclient.h  udplistener.cpp  udplistener.h  udpnetworksocket.cpp  udpnetworksocket.h
src/: aboutdialog.cpp  aboutdialog.h  basketcommon.cpp  basketcommon.h  basketutils.cpp  basketutils.h  changepassword.cpp  changepassword.h  coreplugin.cpp  coreplugin.h  editfolderdialog.cpp  editfolderdialog.h  editpwddialog.cpp  editpwddialog.h  firstnetworksender.cpp  firstnetworksender.h  main.cpp  mainwindow.cpp  mainwindow.h  passwordwidget.cpp  passwordwidget.h  plugin_share.h  pluginsloader.cpp  pluginsloader.h  settingsdialog.cpp  settingsdialog.h  syncclientthread.cpp  syncclientthread.h  syncrequestthread.cpp  syncrequestthread.h  syncthread.cpp  syncthread.h
tools/: Info.plist  basketpwd-ui-for-old-qt.patch  basketpwd.desktop  basketpwd.exe.manifest  basketpwd.spec  copy-image.sh  make-source-archive  win-build.cmd
tools/SlackBuild/: README  basketpwd.SlackBuild  slack-desc
tools/mac_resource/en.lproj/: InfoPlist.strings
tools/mac_resource/ru.lproj/: InfoPlist.strings
tools/nsis/: basketpwd-cp1251.nsi  basketpwd-utf8.nsi  basketpwd-winx64.nsi  basketpwd.nsi.in  make-setuper.sh
tools/slack/: slack-desc  slack-required
ui/: aboutdialog.ui  changepassword.ui  editPwd.ui  editfolderdialog.ui  mainwindow.ui  settingsdialog.ui
